<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<parent>
		<groupId>io.virtualan</groupId>
		<artifactId>virtualan-project</artifactId>
		<version>2.1.5-SNAPSHOT</version>
		<relativePath>../..</relativePath>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.virtualan</groupId>
	<artifactId>virtualan-plugin</artifactId>
	<packaging>jar</packaging>
	<name>virtualan-plugin</name>
	<version>2.1.5-SNAPSHOT</version>
	<description>
		Virtualan is an open source-based Open API Interface driven Service virtualization tool. Virtualan - Mock service developed on top of the spring boot framework. Any Rest API can be converted as Virtual service in minutes using annotations. Annotations: VirtualService and ApiVirtual
	</description>
	<properties>
		<java.version>1.8</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<hsqldb.version>2.3.2</hsqldb.version>
		<spring.boot.version>2.2.4.RELEASE</spring.boot.version>
		<springfox.version>2.9.2</springfox.version>
		<spring.version>5.0.3.RELEASE</spring.version>
		<groovy.version>3.0.5</groovy.version>
		<junit.version>4.13.1</junit.version>
		<slf4j.version>1.7.12</slf4j.version>
		<validation-api.version>1.1.0.Final</validation-api.version>
		<lombok.version>1.18.10</lombok.version>
		<jaxb.version>2.3.1</jaxb.version>
		<jackson-databind-nullable.version>0.2.1</jackson-databind-nullable.version>
		<mapson.version>1.0.1</mapson.version>
		<org.json.version>20190722</org.json.version>
		<swagger-annotations.version>1.5.18</swagger-annotations.version>
		<commons-configuration.version>1.10</commons-configuration.version>
		<rs-api.version>2.1.1</rs-api.version>
		<commons-lang3.version>3.7</commons-lang3.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<jackson-databind.version>2.10.4</jackson-databind.version>
	</properties>
	<developers>
		<!-- original author of the project -->
		<developer>
			<id>elans3</id>
			<name>Elan Thangamani</name>
			<email>elan.thangamani@virtualan.io</email>
		</developer>
	</developers>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>com.googlecode.maven-download-plugin</groupId>
				<artifactId>download-maven-plugin</artifactId>
				<version>1.2.1</version>
				<executions>
					<execution>
						<id>swagger-editor</id>
						<phase>compile</phase>
						<goals>
							<goal>wget</goal>
						</goals>
						<configuration>
							<url>https://github.com/swagger-api/swagger-editor/archive/master.tar.gz</url>
							<outputFileName>swagger-editor.tar.gz</outputFileName>
							<unpack>true</unpack>
							<outputDirectory>${project.build.directory}</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>swagger-ui</id>
						<phase>compile</phase>
						<goals>
							<goal>wget</goal>
						</goals>
						<configuration>
							<url>https://github.com/swagger-api/swagger-ui/archive/master.tar.gz</url>
							<outputFileName>swagger-ui.tar.gz</outputFileName>
							<unpack>true</unpack>
							<outputDirectory>${project.build.directory}</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.7</version>
				<executions>
					<execution>
						<id>ui-resource</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>target/classes/META-INF/resources/swagger-ui/</outputDirectory>
							<resources>
								<resource>
									<directory>${project.build.directory}/swagger-ui-master/dist/</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>c-ui-resource</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>target/classes/META-INF/resources/swagger-ui/</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/resources/META-INF/resources</directory>
									<includes>
										<include>swaggerex-ui.html</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>editor-resource</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>target/classes/META-INF/resources/swagger-editor/</outputDirectory>
							<resources>
								<resource>
									<directory>${project.build.directory}/swagger-editor-master/</directory>
									<includes>
										<include>dist/**</include>
										<include>index.html</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- JUnit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson-databind.version}</version>
		</dependency>

		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>${groovy.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>${spring.boot.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring.boot.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<version>${spring.boot.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-batch</artifactId>
			<version>${spring.boot.version}</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>${jaxb.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>${jackson-databind-nullable.version}</version>
		</dependency>

		<dependency>
			<groupId>io.virtualan</groupId>
			<artifactId>mapson</artifactId>
			<version>${mapson.version}</version>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>${org.json.version}</version>
		</dependency>

		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>${swagger-annotations.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>${commons-configuration.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>${validation-api.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>${rs-api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>${commons-beanutils.version}</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${springfox.version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${springfox.version}</version>
		</dependency>
	</dependencies>
</project>
